--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1"
+  },
+  "dependencies": {
+    "mongoose": "^4.9.8"
   }
 }
