--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.24.1"
+    "babel-register": "^6.24.1",
+    "typed-graphql": "^1.0.2"
   },
   "dependencies": {
+    "graphql": "^0.9.1",
+    "graphql-server-koa": "^0.7.2",
+    "koa": "^2.2.0",
+    "koa-bodyparser": "^3.2.0",
+    "koa-router": "^7.1.1",
     "mongoose": "^4.9.8"
   }
 }
